[package]
name = "sctverify"
description = "A minimal approach to sct verification, just checking signature"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
reqwest = { version = "0.10.4", default-features = false, features = [
    "blocking",
    "native-tls",
    "gzip",
    "json",
] }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
base64 = "0.21.0"
openssl = "0.10.24"
foreign-types = "0.3.2"
openssl-sys = "0.9.72"
log = "0.4.7"
lazy_static = "1.4.0"

[build-dependencies]
openssl-sys = "0.9.72"
